--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "angularx-qrcode": "^16.0.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.7",
